fixed overflow issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,6 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: var(--font-sans);
-  overflow-x: hidden;
 }
 html {
   scroll-behavior: smooth;
